Use the official GraalVM plugin